# grpc-benchmark

./: Cargo.toml  bench.py  results.csv
proto/: echo.proto
src/: client.rs  server.rs
